--- a/Discuz/Discuz/Views/ForumIndexView.xaml
+++ b/Discuz/Discuz/Views/ForumIndexView.xaml
@@ -3,15 +3,34 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Discuz.Views.ForumIndexView"
              xmlns:cal="clr-namespace:Caliburn.Micro.Xamarin.Forms;assembly=Caliburn.Micro.Platform.Xamarin.Forms"
+             xmlns:ctrls="clr-namespace:Discuz.Controls;assembly=Discuz"
              >
-
   <ListView ItemsSource="{Binding Datas}"
+            HasUnevenRows="True"
+            SeparatorVisibility="None"
+            IsGroupingEnabled="True"
             >
+    <ListView.GroupHeaderTemplate>
+      <DataTemplate>
+        <ViewCell>
+          <ViewCell.View>
+            <StackLayout Orientation="Horizontal" Padding="10">
+              <BoxView WidthRequest="10" HeightRequest="10" Color="Green" VerticalOptions="Center" />
+              <Label Text="{Binding Title}" />
+            </StackLayout>
+          </ViewCell.View>
+        </ViewCell>
+      </DataTemplate>
+    </ListView.GroupHeaderTemplate>
     <ListView.ItemTemplate>
       <DataTemplate>
         <ViewCell>
           <ViewCell.View>
-            <ContentView cal:View.Model="{Binding }" />
+            <StackLayout Padding="10,1">
+              <ctrls:Border CornerRadius="5" StrokeThickness="1" Stroke="Gray" Padding="10" BackgroundColor="Gray">
+                <ContentView cal:View.Model="{Binding }" />
+              </ctrls:Border>
+            </StackLayout>
           </ViewCell.View>
         </ViewCell>
       </DataTemplate>
