--- a/Discuz/Discuz/Views/ForumDetailView.xaml
+++ b/Discuz/Discuz/Views/ForumDetailView.xaml
@@ -19,7 +19,11 @@
     </Grid.ColumnDefinitions>
 
 
-    <Label Text="{Binding Data.Name}" Style="{StaticResource ForumTitle}" Grid.ColumnSpan="3" />
+    <StackLayout Orientation="Horizontal" Grid.Row="0" Grid.ColumnSpan="3">
+      <Label Text="{Binding Data.Name}" Style="{StaticResource ForumTitle}" />
+      <Image Source="arrow_left.png" HorizontalOptions="EndAndExpand" HeightRequest="20" WidthRequest="20" />
+    </StackLayout>
+    
     <Label Text="{Binding Data.Description, Converter={StaticResource HtmlClear}}" Style="{StaticResource ForumDescription}" Grid.Row="1" Grid.ColumnSpan="3" />
 
     <ctrls:Border Grid.Row="2" Grid.Column="0" StrokeThickness="1" Stroke="#999999" BackgroundColor="#666666" CornerRadius="10" Padding="2">
