--- a/Discuz/Discuz.WinPhone/App.xaml
+++ b/Discuz/Discuz.WinPhone/App.xaml
@@ -3,9 +3,48 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:Discuz.WinPhone"
+    xmlns:cvt="clr-namespace:Discuz.WinPhone.Converters"
+    xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
+    xmlns:ec="clr-namespace:Microsoft.Expression.Interactivity.Core;assembly=Microsoft.Expression.Interactions"
     >
 
     <Application.Resources>
-        <local:Bootstrapper x:Key="Bootstrapper" />
-    </Application.Resources>    
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary>
+                    <local:Bootstrapper x:Key="Bootstrapper" />
+                </ResourceDictionary>
+
+                <ResourceDictionary>
+                    <cvt:BoolToVisibility x:Key="boolCvt" />
+                    <DataTemplate x:Key="TabbedPageHeader1">
+                        <StackPanel>
+                            <TextBlock Text="{Binding Title}" FontSize="30" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Bottom">
+                                    <!--<i:Interaction.Triggers>
+                                        <ec:DataTrigger Binding="{Binding IsEnabled}" Value="False">
+                                            <ec:ChangePropertyAction PropertyName="Padding" Value="0" />
+                                        </ec:DataTrigger>
+                                        <ec:DataTrigger Binding="{Binding IsEnabled}" Value="True">
+                                            <ec:ChangePropertyAction PropertyName="Padding" Value="0,0,50,0" />
+                                        </ec:DataTrigger>
+                                    </i:Interaction.Triggers>-->
+                            </TextBlock>
+                            <!--<Rectangle Height="2" Fill="Green" Visibility="{Binding IsEnabled,Converter={StaticResource boolCvt}}" />-->
+                            <Rectangle Height="2" Fill="Green">
+                                <i:Interaction.Triggers>
+                                    <ec:DataTrigger Binding="{Binding IsEnabled}" Value="False">
+                                        <ec:ChangePropertyAction PropertyName="Fill" Value="Gray" />
+                                    </ec:DataTrigger>
+                                    <ec:DataTrigger Binding="{Binding IsEnabled}" Value="True">
+                                        <ec:ChangePropertyAction PropertyName="Fill" Value="Green" />
+                                    </ec:DataTrigger>                                    
+                                </i:Interaction.Triggers>
+                            </Rectangle>
+                        </StackPanel>
+                    </DataTemplate>
+                </ResourceDictionary>
+
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Application.Resources>
 </Application>
