--- a/Discuz/Discuz/Views/TabView.xaml
+++ b/Discuz/Discuz/Views/TabView.xaml
@@ -6,6 +6,7 @@
             xmlns:local="clr-namespace:Discuz;assembly=Discuz"
             ItemsSource="{Binding Datas}"
             Title="蓝色理想"
+            BackgroundColor="#1e5263"
             >
 
   <TabbedPage.ItemTemplate>
