--- a/Discuz/Discuz/Views/ForumIndexView.xaml
+++ b/Discuz/Discuz/Views/ForumIndexView.xaml
@@ -36,7 +36,7 @@
         <ViewCell>
           <ViewCell.View>
             <StackLayout Padding="5,1">
-              <ctrls:Border CornerRadius="5" StrokeThickness="1" Stroke="#cccccc" Padding="10" BackgroundColor="Gray">
+              <ctrls:Border Style="{StaticResource BlockBorder}">
                 <ContentView cal:View.Model="{Binding }" />
               </ctrls:Border>
             </StackLayout>
