--- a/Discuz/Discuz.WinPhone/App.xaml
+++ b/Discuz/Discuz.WinPhone/App.xaml
@@ -21,41 +21,17 @@
                     <cvt:BoolToVisibility x:Key="boolCvt" />
                     <DataTemplate x:Key="TabbedPageHeader1">
                         <StackPanel>
-
-                            <Border CornerRadius="20" Padding="15,0" Background="#33ffffff" BorderBrush="#33999999" BorderThickness="1">
-                                <TextBlock Text="{Binding Title}" FontSize="30" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Bottom" />
-                                <i:Interaction.Triggers>
-                                    <ec:DataTrigger Binding="{Binding IsEnabled}" Value="False">
-                                        <ec:ChangePropertyAction PropertyName="Background" Value="Transparent" />
-                                        <ec:ChangePropertyAction PropertyName="BorderBrush" Value="Transparent" />
-                                        <ec:ChangePropertyAction PropertyName="Padding" Value="0" />
-                                    </ec:DataTrigger>
-                                    <ec:DataTrigger Binding="{Binding IsEnabled}" Value="True">
-                                        <ec:ChangePropertyAction PropertyName="Background" Value="#33ffffff" />
-                                        <ec:ChangePropertyAction PropertyName="BorderBrush" Value="#33999999" />
-                                        <ec:ChangePropertyAction PropertyName="Padding" Value="15,0" />
-                                    </ec:DataTrigger>
-                                </i:Interaction.Triggers>
-                            </Border>
-                            <!--<i:Interaction.Triggers>
-                                        <ec:DataTrigger Binding="{Binding IsEnabled}" Value="False">
-                                            <ec:ChangePropertyAction PropertyName="Padding" Value="0" />
-                                        </ec:DataTrigger>
-                                        <ec:DataTrigger Binding="{Binding IsEnabled}" Value="True">
-                                            <ec:ChangePropertyAction PropertyName="Padding" Value="0,0,50,0" />
-                                        </ec:DataTrigger>
-                                    </i:Interaction.Triggers>-->
-
-                            <!--<Rectangle Height="1" Fill="#FF6699">
+                            <TextBlock Text="{Binding Title}" FontSize="25" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Bottom" />
+                            <Path Data="M50,0 L0,50 L100,50" Fill="#1e5263" Height="5"  Stretch="Fill" StrokeThickness="0" UseLayoutRounding="False"  Width="20">
                                 <i:Interaction.Triggers>
                                     <ec:DataTrigger Binding="{Binding IsEnabled}" Value="False">
                                         <ec:ChangePropertyAction PropertyName="Fill" Value="Transparent" />
                                     </ec:DataTrigger>
                                     <ec:DataTrigger Binding="{Binding IsEnabled}" Value="True">
-                                        <ec:ChangePropertyAction PropertyName="Fill" Value="Green" />
+                                        <ec:ChangePropertyAction PropertyName="Fill" Value="#1e5263" />
                                     </ec:DataTrigger>
                                 </i:Interaction.Triggers>
-                            </Rectangle>-->
+                            </Path>
                         </StackPanel>
                     </DataTemplate>
 
@@ -109,28 +85,13 @@
                                     <Grid HorizontalAlignment="{TemplateBinding HorizontalAlignment}" VerticalAlignment="{TemplateBinding VerticalAlignment}">
                                         <Grid.RowDefinitions>
                                             <RowDefinition Height="Auto"/>
-                                            <RowDefinition Height="Auto"/>
                                             <RowDefinition Height="*"/>
                                         </Grid.RowDefinitions>
-                                        <Grid Background="{TemplateBinding Background}" Grid.RowSpan="3"/>
-                                        <Grid Background="#FF099CCD">
-                                            <local:TilePanel TileWidth="6" TileHeight="6" Height="50">
-                                                <local:TilePanel.Image>
-                                                    <ImageBrush ImageSource="texture.png" />
-                                                </local:TilePanel.Image>
-                                            </local:TilePanel>
-                                            <StackPanel Orientation="Horizontal" Margin="20,0">
-                                                <Image Source="icon.png" Width="40" Height="40" Margin="0,0,10,0" />
-                                                <ContentControl x:Name="TitleElement" ContentTemplate="{TemplateBinding TitleTemplate}" Content="{TemplateBinding Title}" HorizontalAlignment="Left" Margin="0" Style="{StaticResource PivotTitleStyle}" Background="#FF099CCD"/>
-                                            </StackPanel>                                            
+                                        <Grid Background="{TemplateBinding Background}" Grid.RowSpan="2"/>
+                                        <Grid Background="#FF1B7592" Grid.Row="0">
+                                            <Primitives:PivotHeadersControl x:Name="HeadersListElement" Style="{StaticResource PivotHeadersControlStyle1}" Grid.Row="1" />
                                         </Grid>
-
-                                        <Grid Background="#FF1B7592" Grid.Row="1">
-                                            <Grid Margin="0,5">
-                                                <Primitives:PivotHeadersControl x:Name="HeadersListElement" Style="{StaticResource PivotHeadersControlStyle1}" Grid.Row="1" />
-                                            </Grid>
-                                        </Grid>
-                                        <ItemsPresenter x:Name="PivotItemPresenter" Margin="{TemplateBinding Padding}" Grid.Row="2"/>
+                                        <ItemsPresenter x:Name="PivotItemPresenter" Margin="{TemplateBinding Padding}" Grid.Row="1"/>
                                     </Grid>
                                 </ControlTemplate>
                             </Setter.Value>
