--- a/Discuz/Discuz.WinPhone/MainPage.xaml
+++ b/Discuz/Discuz.WinPhone/MainPage.xaml
@@ -7,10 +7,30 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:winPhone="clr-namespace:Xamarin.Forms.Platform.WinPhone;assembly=Xamarin.Forms.Platform.WP8"
+    xmlns:local="clr-namespace:Discuz.WinPhone"
     mc:Ignorable="d"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
     SupportedOrientations="Portrait" Orientation="Portrait"
     shell:SystemTray.IsVisible="False">
+
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <local:TilePanel TileWidth="6" TileHeight="6" Height="50" Grid.Row="0">
+            <local:TilePanel.Image>
+                <ImageBrush ImageSource="texture.png" />
+            </local:TilePanel.Image>
+        </local:TilePanel>
+        <StackPanel Orientation="Horizontal" Margin="10,0" Grid.Row="0" VerticalAlignment="Center">
+            <Image Source="icon.png" Width="40" Height="40" Margin="0,0,10,0" />
+            <TextBlock Text="蓝色理想" VerticalAlignment="Center" />
+        </StackPanel>
+        
+        <ContentPresenter x:Name="mainBody" Grid.Row="1" />
+    </Grid>
+
 </winPhone:FormsApplicationPage>
