--- a/Discuz/Discuz/Views/ForumDisplayView.xaml
+++ b/Discuz/Discuz/Views/ForumDisplayView.xaml
@@ -21,7 +21,8 @@
             SeparatorVisibility="None"
             IsPullToRefreshEnabled="True"
             RefreshCommand="{Binding RefreshCmd}"
-            IsRefreshing="{Binding InRefresh}">
+            IsRefreshing="{Binding InRefresh}"
+            >
 
     <ListView.ItemTemplate>
       <DataTemplate>
